2010-12-10  Bob Halley  <halley@dnspython.org>

	* dns/rdata.py (Rdata.__hash__): Added a __hash__ method for rdata.

2010-11-23  Bob Halley  <halley@dnspython.org>

	* (Version 1.9.2 released)

2010-11-23  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py (_need_pycrypto): DSA and RSA are modules, not
	  functions, and I didn't notice because the test suite masked
	  the bug!  *sigh*

2010-11-22  Bob Halley  <halley@dnspython.org>

	* (Version 1.9.1 released)

2010-11-22  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py: the "from" style import used to get DSA from
	  PyCrypto trashed a DSA constant.  Now a normal import is used
	  to avoid namespace contamination.

2010-11-20  Bob Halley  <halley@dnspython.org>

	* (Version 1.9.0 released)

2010-11-07  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py: Added validate() to do basic DNSSEC validation
	  (requires PyCrypto). Thanks to Brian Wellington for the patch.

	* dns/hash.py: Hash compatibility handling is now its own module.

2010-10-31  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (zone_for_name): A query name resulting in a
	  CNAME or DNAME response to a node which had an SOA was incorrectly
	  treated as a zone origin.  In these cases, we should just look
	  higher.  Thanks to Gert Berger for reporting this problem.

	* Added zonediff.py to examples.  This program compares two zones
	  and shows the differences either in diff-like plain text, or
	  HTML.  Thanks to Dennis Kaarsemaker for contributing this
	  useful program.

2010-10-27  Bob Halley  <halley@dnspython.org>

	* Incorporate a patch to use poll() instead of select() by
	  default on platforms which support it.  Thanks to
	  Peter Schüller and Spotify for the contribution.

2010-10-17  Bob Halley  <halley@dnspython.org>

	* Python prior to 2.5.2 doesn't compute the correct values for
	  HMAC-SHA384 and HMAC-SHA512.  We now detect attempts to use
	  them and raise NotImplemented if the Python version is too old.